--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
+  border-right: 1px solid black;
   padding: 10px;
 }
 
